# gsc

./: .gitattributes  .gitignore  LICENSE  README.md  biome.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.e2e.json  tsconfig.e2e.tsbuildinfo  tsconfig.json  vite-plugin-kokoro-voices.ts  vite-plugin-onnx-wasm.ts  vite-plugin-sync-favicon.ts  vite-trailing-slash-redirect.ts  vite.config.ts
.github/workflows/: ci.yml  deploy.yml  experimental.yml  pages-deploy-experimental.yml  release.yml  test.yml
app/: index.html
docs/: architecture.md  remote.md
e2e/: asset-cue-highlight.spec.ts  asset-delete-in-use.spec.ts  asset-drop.spec.ts  audio-playback.spec.ts  auto-recovery.spec.ts  cue-list.spec.ts  cue-target-highlight.spec.ts  cue-undo-clipboard.spec.ts  fade-cues.spec.ts  group-cue-editing.spec.ts  hot-cue-drop.spec.ts  hot-cue-export.spec.ts  hot-cue-lists.spec.ts  hot-cue-overlays.spec.ts  hot-cue-playback.spec.ts  hot-cue-sequence.spec.ts  hot-cue-show-mode.spec.ts  keyboard-shortcuts.spec.ts  loop-playback.spec.ts  midi-mapping.spec.ts  nested-groups.spec.ts  output-window-video-playback.spec.ts  parallel-group.spec.ts  project-open-selection.spec.ts  project-round-trip.spec.ts  qlab5-import.spec.ts  sequence-fade-stop.spec.ts  sequence.spec.ts  show-mode-new-project.spec.ts  smoke.spec.ts  stop-cue-playback.spec.ts  video-asset-drop.spec.ts  video-playback.spec.ts  waveform-seek.spec.ts
e2e-desktop/: README.md  wdio.conf.ts
e2e-desktop/specs/: output-scratch-video.e2e.ts  smoke-go.e2e.ts
e2e/adapters/: playwright-driver.ts  wdio-driver.ts  wdio-output-window.ts
e2e/fixtures/: generate-audio-fixtures.mjs  generate-video-fixtures.mjs  generate-white-noise.mjs  playback-formats.mjs  test-video-playback.m4v  test-video-playback.mkv  test-video-playback.mov  test-video-playback.webm  white-noise-playback.aac  white-noise-playback.aiff  white-noise-playback.flac  white-noise-playback.m4a
e2e/helpers/: active-cues.ts  add-cue.ts  app.ts  container-cues.ts  cue-editing.ts  cue-list-panel.ts  cue-target-highlight.ts  drop-audio.ts  fade-cues.ts  hot-cues.ts  loop-playback.ts  midi.ts  output-window.ts  project-file-menu.ts  project-session.ts  sequence.ts
e2e/shared/: actions.ts  constants.ts  driver.ts  fixtures.ts  output-window.ts  playback-drift.ts  selectors.ts
scripts/: check-e2e-imports.mjs  check-stop-targets.ts  debug-cue-list-structure.ts  debug-fade-cues.ts  debug-minimal-structure.ts  debug-qlab5-decode.ts  debug-stop-cues.ts  favicon-assets.ts  import-qlab5-cli.ts  import-qlab5-to-disk.ts  sync-favicon.ts  sync-version.mjs
scripts/ci/: bundle-onnxruntime-macos.sh
scripts/screenshots/: capture.mjs  demo-project.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml.example
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: gsc-devices.toml  gsc-project-open.toml
src-tauri/src/: audio_output.rs  devices.rs  dmx.rs  enttec_pro.rs  kokoro_phonemize.rs  lib.rs  macos_package.rs  main.rs  midi_input.rs  osc.rs  project_open.rs  remote.rs  speech_model_cache.rs
src-tauri/src/ndi/: imp.rs  mod.rs  stub.rs
src-tauri/src/supertonic/: helper.rs  mod.rs
src/app/: main.tsx
(+673 files in other folders)
