[package]
name = "gsc"
version = "0.1.0"
description = "Grantler Stage Control"
authors = ["Grantler Instruments"]
edition = "2021"

[lib]
name = "gsc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
midir = "0.10"
rosc = "0.10"
serialport = "4.6"
