[package]
name = "gsc"
version = "0.0.24"
description = "Grantler Stage Control"
authors = ["Grantler Instruments"]
edition = "2021"

[lib]
name = "gsc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
ndi = ["dep:grafton-ndi", "dep:xcap", "dep:image"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-keepawake = "0.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
midir = "0.10"
rosc = "0.10"
serialport = "4.6"
grafton-ndi = { version = "0.12", optional = true, default-features = false }
xcap = { version = "0.9", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
futures-util = { version = "0.3" }
local-ip-address = "0.6"
rand = "0.8"
