[package]
name = "gsc"
version = "0.0.25"
description = "Grantler Stage Control"
authors = ["Grantler Instruments"]
edition = "2021"

[lib]
name = "gsc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
ndi = ["dep:grafton-ndi", "dep:xcap", "dep:image"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-keepawake = "0.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
midir = "0.10"
rosc = "0.10"
serialport = "4.6"
grafton-ndi = { version = "0.12", optional = true, default-features = false }
xcap = { version = "0.9", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
futures-util = { version = "0.3" }
local-ip-address = "0.6"
rand = "0.8"
rand_distr = "0.4"
espeak-ng = { version = "0.1.2", default-features = false, features = ["bundled-data-en"] }
# Supertonic TTS (desktop)
ort = "2.0.0-rc.7"
ndarray = { version = "0.17", features = ["rayon"] }
hound = "3.5"
unicode-normalization = "0.1"
regex = "1.10"
anyhow = "1.0"
ureq = { version = "2.12", default-features = false, features = ["tls"] }
